--- a/models/staging/jaffle_shop/stg_jaffle_shop.yml
+++ b/models/staging/jaffle_shop/stg_jaffle_shop.yml
@@ -2,8 +2,10 @@ version: 2
 
 models:
   - name: stg_customers
+    description: One unique customer per row
     columns: 
       - name: customer_id
+        description: Primary key for stg_customers
         tests:
           - unique
           - not_null
@@ -18,6 +20,7 @@ models:
               to: source('jaffle_shop', 'orders')
               field: id
       - name: status
+        description: '{{ doc("order_status") }}'
         tests:
           - accepted_values:
               values:
